# rustymotif

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run_default.sh
.github/workflows/: build-on-release.yml  rust.yml
src/lib/: iupac.rs  lib.rs  modtype.rs  motif.rs  pileup.rs  preprocess.rs  strand.rs
test_data/: annotated_records.tsv  annotated_records_empty_motifs.tsv  annotated_records_multiple.tsv  bin-motifs.tsv  contig_bin.tsv
