[package]
name = "rustymotif"
version = "0.1.6"
edition = "2021"

[dependencies]
seq_io = "0.3.2"
bio = "2.0.3"
tempfile = "3.14.0"
clap = { version = "4.5.27", features = ["derive"] }
log = "0.4.14"
csv = "1.3.1"
anyhow = "1.0.95"
env_logger = "0.11.6"
regex = "1.11.1"
ahash = "0.8.11"
atoi = "2.0.0"

[lib]
name = "utils"
path = "src/lib/lib.rs"

[[bin]]
name = "rustymotif"
path = "src/bin/rustymotif/main.rs"


[profile.release]
debug = true