[package]
name = "rustymotif"
version = "0.1.6"
edition = "2021"

[dependencies]
seq_io = "0.3.3"
bio = "2.0.3"
tempfile = "3.16.0"
clap = { version = "4.5.27", features = ["derive"] }
log = "0.4.14"
csv = "1.3.1"
anyhow = "1.0.95"
env_logger = "0.11.6"
regex = "1.11.1"
ahash = "0.8.11"
atoi = "2.0.0"
ordered-float = "4.6.0"
petgraph = "0.7.1"
itertools = "0.14.0"
serde = "1.0.217"
statrs = "0.18.0"
strum = "0.27.1"
strum_macros = "0.27.1"

[lib]
name = "utils"
path = "src/lib/lib.rs"

[[bin]]
name = "rustymotif"
path = "src/bin/rustymotif/main.rs"

[[bin]]
name = "mixedmotif"
path = "src/bin/mixedmotif/main.rs"


[profile.release]
debug = true