[package]
name = "rustymotif"
version = "0.3.0"
edition = "2024"

[dependencies]
seq_io = "0.3.4"
bio = "2.3.0"
tempfile = "3.20.0"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
csv = "1.3.1"
anyhow = "1.0.98"
env_logger = "0.11.8"
regex = "1.11.1"
ahash = "0.8.11"
atoi = "2.0.0"
ordered-float = "4.6.0"
petgraph = "0.7.1"
itertools = "0.14.0"
serde = "1.0.217"
statrs = "0.18.0"
strum = "0.27.1"
strum_macros = "0.27.1"
rust-htslib =  "0.49.0"

[lib]
name = "utils"
path = "src/lib/lib.rs"

[[bin]]
name = "rustymotif"
path = "src/bin/rustymotif/main.rs"

[[bin]]
name = "mixedmotif"
path = "src/bin/mixedmotif/main.rs"

[[bin]]
name = "motif_summary"
path = "src/bin/motif_summary/main.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess/main.rs"

[profile.release]
debug = true