[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rustymotif_utils"
version = "0.3.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
